zod_gen_derive/tests/ui/internal_tag_tuple.stderr
error: proc-macro derive panicked
 --> tests/ui/internal_tag_tuple.rs
  |
  | #[derive(ZodSchema, Serialize, Deserialize)]
  |          ^^^^^^^^^
  |
  = help: message: #[serde(tag = "...")] cannot be used with tuple variants

error: #[serde(tag = "...")] cannot be used with tuple variants
 --> tests/ui/internal_tag_tuple.rs
  |
  |     Tuple(u32, String),
  |     ^^^^^^^^^^^^^^^^^^
